# vipin-lab

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  start.cmd
api/: server.py
cli/: main.py  monitor.py  repl.py  todo.py
lab/context/: project_scanner.py
lab/core/: config.py  domain_config.py  models.py  orchestrator.py  progress.py
lab/engines/: analogy.py  anti_toy.py  evidence.py  kill_first.py  phenomenon.py
lab/memory/: store.py
lab/novelty/: checker.py
lab/phases/: p1_ideation.py  p2_refine.py  p3_experiment_plan.py  p4_bridge.py  p5_paper_write.py  p6_review.py  p7_p8_audit.py
lab/providers/: literature.py  llm.py
lab/results/: loader.py
lab/search/: beam_search.py
lab/tools/: agent.py  registry.py
tests/: test_core.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.css  App.jsx  api.js  index.css  main.jsx
ui/src/components/: MainPane.css  MainPane.jsx  SessionView.css  SessionView.jsx  Sidebar.css  Sidebar.jsx
